--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,76 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" href="css/style.css.min">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <div class="promo">
-        
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="icons/Main_logo.png" alt="Logo">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">
+                        +7 (499) 922-89-74
+                    </a>
+                    <button class="button">
+                        заказать звонок
+                    </button>
+                </div>
+            </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+
+                <div class="promo__icons">
+                    <div class="promo__icon">Время подбора: 10 минут
+                        <img src="icons/stopwatch.png" alt="Stopwatch">
+                    </div>
+                    <div class="promo__icon">Бесплатная доставка
+                        <img src="icons/hand_cart.png" alt="Hand cart">
+                    </div>
+                    <div class="promo__icon">Ответим на все вопросы
+                        <img src="icons/message.png" alt="Message">
+                    </div>
+                </div>
+
+                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+            </div>
+           
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="advantages__wrapper">
+            <h2 class="advantages_header">
+                НАШИ ПРЕИМУЩЕСТВА
+            </h2>
+            <div class="advantages__block">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="cup">
+                    <span>Делимся опытом</span>
+                    Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="heart">
+                    <span>Заботимся о здоровье</span>
+                    Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="Shoe">
+                    <span>Учим бегать</span>
+                    Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в Ass - <a href="#">I LOVE RUNNING.</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
