--- a/src/index.html
+++ b/src/index.html
@@ -447,6 +447,21 @@
         </div>
     </section>
 
+    <footer>
+        <div class="footer__map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1270.2878258818002!2d30.522947577159858!3d50.44900434419392!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce51271776ad%3A0xb0d410c97b3a4426!2sLviv%20Croissants!5e0!3m2!1suk!2sua!4v1660471709296!5m2!1suk!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="footer__social">
+            <address>вулиця Хрещатик, 24, Київ</address>
+            <a href="tel:84999228974" class="footer__tel">8 (499) 922-89-74</a>
+            <div class="footer__social-items">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div> 
+    </footer>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
